tests/negative/gold/nested-error-test.gold
tests/negative/nested-error-test.toit:20:11: error: Can't call result of evaluating expression
    local := ? 42
          ^~
tests/negative/nested-error-test.toit:21:11: error: Unresolved identifier: 'local'
    : bar local
          ^~~~~
tests/negative/nested-error-test.toit:25:5: error: Can't call result of evaluating expression
    (local := ?) 42
    ^
tests/negative/nested-error-test.toit:25:12: error: Definition of variable not allowed at this location
    (local := ?) 42
           ^~
tests/negative/nested-error-test.toit:26:11: error: Unresolved identifier: 'local'
    : bar local
          ^~~~~
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/nested-error-test.toit'
tests/negative/nested-error-test.toit:19:6: error: Class 'string' does not have any method 'bar'
  "".bar
     ^~~
Compilation failed
